# bigBoy

./: CMakeLists.txt  helper.sh  main.cpp
CORE/CORE/: AStar.cpp  AStar.hpp  CMakeLists.txt  CarPathPlanner.cpp  CarPathPlanner.hpp  Checker.hpp  CutFindingTask.cpp  CutFindingTask.hpp  DronePathPlanner.cpp  DronePathPlanner.hpp  Dubins.cpp  Dubins.hpp  Graph.cpp  Graph.hpp  GraphManager.cpp  GraphManager.hpp  Obstacle.cpp  Obstacle.hpp  ObstacleManager.cpp  ObstacleManager.hpp  PathData.cpp  PathData.hpp  PathFindingTask.cpp  PathFindingTask.hpp  PathPlanner.cpp  PathPlanner.hpp  RangedDubinsSolver.cpp  RangedDubinsSolver.hpp  Solver.cpp  Solver.hpp
GUI/GUI/: Mainwindow.cpp  Mainwindow.hpp
configs/: config1.yaml  config2.yaml
lib/my_lib/: AStar.cpp  AStar.hpp  CMakeLists.txt  Checker.hpp  Data.cpp  Data.hpp  Dubins.cpp  Dubins.hpp  Graph.cpp  Graph.hpp  GraphManager.cpp  GraphManager.hpp  Obstacle.cpp  Obstacle.hpp  ObstacleManager.cpp  ObstacleManager.hpp  RangedDubinsSolver.cpp  RangedDubinsSolver.hpp  Solver.cpp  Solver.hpp  Task1.cpp  Task1.hpp  Task2.cpp  Task2.hpp  Types.hpp  my_libConfig.cmake.in
